# mutt-ng-svn

./: do-commit.sh
branches/muttng-rewrite/: GNUmakefile  GNUmakefile.compile_c  GNUmakefile.compile_cpp  GNUmakefile.config  GNUmakefile.config.default  GNUmakefile.subdirs  GNUmakefile.sysconf  GNUmakefile.whereis  configure.pl  muttng-new.zargo
branches/muttng-rewrite/contrib/: doxygen.css  html_head_number.pl  licensing.pl
branches/muttng-rewrite/doc/: GNUmakefile  func_def.xml  func_descr.xml  libmuttng.zargo  muttng-new.zargo  muttng.zargo  var_def.xml  var_descr.xml
branches/muttng-rewrite/doc/common/: ack.xml  ack_mutt.xml  ack_muttng.xml  dev_muttng.xml
branches/muttng-rewrite/doc/css/: muttng.css
branches/muttng-rewrite/doc/de/: build.xml  func_descr.xml  reference.xml
branches/muttng-rewrite/doc/de_DE/: config.xml  head.xml  intro.xml  var_descr.xml
branches/muttng-rewrite/doc/en/: config.xml  hacking.xml  manual-full.xml  manual.xml  muttng.css  var_descr.xml
branches/muttng-rewrite/doc/examples/: GNUmakefile  GNUmakefile.compile_c  GNUmakefile.compile_cpp  core_buffer_format.c  core_buffer_format2.c  core_hash.c  libmuttng_hash.cpp  libmuttng_mailbox_create.cpp  libmuttng_signal.cpp  libmuttng_url.cpp  makefile-sysconf  makefile_compile  makefile_conditional  makefile_config  makefile_structure  makefile_whereis_call1  makefile_whereis_call2  makefile_whereis_use
branches/muttng-rewrite/doc/homepage/: homepage.xml
branches/muttng-rewrite/doc/homepage_de/: homepage.xml  muttng.css
branches/muttng-rewrite/doc/homepage_de_DE/: homepage.xml
branches/muttng-rewrite/doc/homepage_en/: homepage.xml
branches/muttng-rewrite/doc/manual_de/: ack.xml  build.xml  config.xml  devguide.xml  history.xml  intro.xml  manual-full.xml  muttng.ist  trans.xml
branches/muttng-rewrite/doc/manual_en/: ack.xml  build.xml  config.xml  devguide.xml  func_descr.xml  head.xml  intro.xml  licensing.xml  manual-user.xml  muttng.css  reference.xml  trans.xml  var_def.xml
branches/muttng-rewrite/doc/tex/: muttng.sty
branches/muttng-rewrite/doc/xsl/: devguide2docbook.xsl  docbook2html.xsl  docbook_opts.xsl  functions2doxygen.xsl  homepage2xhtml.xsl  manual2docbook.xsl  manual2docbook_tags.xsl  manual2doxygen.xsl  manual2tex.xsl  options2doxygen.xsl
branches/muttng-rewrite/src/: Doxyfile  Doxyfile.in  GNUmakefile
branches/muttng-rewrite/src/core/: GNUmakefile  alloca.h  array.h  base64.c  base64.h  buffer.c  buffer.h  buffer_base.c  buffer_base.h  buffer_base64.c  buffer_base64.h  buffer_format.c  buffer_format.h  buffer_qp.c  buffer_qp.h  buffer_token.c  buffer_token.h  command.c  command.h  conv.c  conv.h  core.c  core.h  exit.c  exit.h  hash.c  hash.h  intl.c  intl.h  io.c  io.h  list.c  list.h  mem.c  mem.h  net.c  net.h  qp.c  qp.h  rx.c  (+8 more)
branches/muttng-rewrite/src/core/test/: GNUmakefile  base64_tests.cpp  base64_tests.h  buffer_tests.cpp  buffer_tests.h  conv_tests.cpp  conv_tests.h  hash_tests.cpp  hash_tests.h  io_tests.cpp  io_tests.h  list_tests.cpp  list_tests.h  net_tests.cpp  net_tests.h  qp_tests.cpp  qp_tests.h  rx_tests.cpp  rx_tests.h  test.cpp
branches/muttng-rewrite/src/libmuttng/: GNUmakefile  abstract_class.cpp  abstract_class.h  debug.cpp  debug.h  features.h  libmuttng.cpp  libmuttng.h  muttng_features.h  muttng_signal.h  signal.h  signal.pl  version.h
branches/muttng-rewrite/src/libmuttng/cache/: GNUmakefile  cache.cpp  (+3 more)
branches/muttng-rewrite/src/muttng/: GNUmakefile  muttng.cpp  muttng.h
branches/muttng-rewrite/src/po/: GNUmakefile  POTFILES  de.po  mutt-ng.pot
branches/muttng-rewrite/src/related/: README  building.h  coding.h  license.h  mainpage.h  manual.h
branches/muttng-rewrite/src/sysconf/: test_alloca.c  test_bindtextdomain.c  test_c99_int.c  test_getaddrinfo.c  test_langinfo.c  test_mmap.c  test_siglist.c  test_signal.c  test_strsep.c
branches/muttng-rewrite/srcdoc/design/: libmuttng.zargo  muttngcore.zargo  muttngui.zargo
trunk/: .dummy  .gdb_history  BUGS  COPYRIGHT  ChangeLog  ChangeLog.mutt  ChangeLog.mutt-ng  ChangeLog.nntp  ChangeLog.old  GPL  INSTALL  Makefile.am  Makefile.in  Muttngrc.head.in  Muttrc  NEWS  OPS  PATCHES  README  README.SECURITY  TODO  TODO.mutt-ng  UPGRADING  _regex.h  acconfig.h  account.c  account.h  aclocal.m4  addrbook.c  alias.c  alias.h  ascii.c  ascii.h  attach.c  attach.h  base64.c  browser.c  browser.h  buffer.c  buffer.h  (+180 more)
trunk/contrib/: Makefile.in  Mush.rc  Pine.rc  gpg.rc  grml-muttng  language.txt  language50.txt  muttng-rpmbuild.sh  muttng.spec  muttngrc.vim  pgp2.rc  pgp5.rc  pgp6.rc  sample.mailcap  sample.muttngrc  sample.muttrc  sample.muttrc-tlr  update-config.pl
trunk/doc/: Makefile.in  PGP-Notes.txt  applying-patches.txt  chunk.xsl  devel-notes.txt  dotlock.man  html.xsl  instdoc.sh  manual.sgml  manual.sgml.head  manual.sgml.tail  manual.txt  manual.xml.head  manual.xml.tail  mbox.man  mutt.man  muttbug.man  muttng-manual.xsl  muttng-tex.xsl  muttng.css  muttng.ist  muttng.sty  muttrc.man  muttrc.man.head  muttrc.man.tail  patch-notes.txt
trunk/doc/dtd/: docbookx.dtd
trunk/imap/: Makefile.am  Makefile.in  auth.c  auth.h  auth_anon.c  auth_cram.c  auth_gss.c  auth_login.c  auth_sasl.c  browse.c  command.c  imap.c  imap.h  imap_private.h  message.c  message.h  mx_imap.c  mx_imap.h  utf7.c  util.c
trunk/intl/: Makefile.in  dcigettext.c  plural.c
trunk/lib/: Makefile.am  debug.c  debug.h  exit.c  exit.h  intl.h  list.c  list.h  mem.c  mem.h  rx.c  rx.h  str.c  str.h
trunk/m4/: Makefile.am  Makefile.in  libesmtp.m4
trunk/nntp/: Makefile.am  mx_nntp.c  mx_nntp.h  newsrc.c  nntp.c  nntp.h
trunk/po/: Makefile.in.in  POTFILES.in  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fr.gmo  fr.po  gl.gmo  gl.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lt.gmo  lt.po  mutt.pot  nl.gmo  nl.po  pl.gmo  (+17 more)
trunk/pop/: Makefile.am  mx_pop.c  mx_pop.h  pop.c  pop.h  pop_auth.c  pop_lib.c
trunk/test/: Makefile.am  Makefile.in  test_muttng.c  test_muttng.h
(+181 files in other folders)
